--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.111.3'  # Adjust the version if necessary
+          hugo-version: '0.123.4'    # Updated Hugo version for PaperMod v8.0
+          extended: true             # Ensure we're using the extended version
 
       - name: Build Site
         run: hugo --minify
