--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -17,7 +22,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.123.4'    # Updated Hugo version for PaperMod v8.0
-          extended: true             # Ensure we're using the extended version
+          extended: true             # Use the extended version
 
       - name: Build Site
         run: hugo --minify
