--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.123.4'    # Updated Hugo version for PaperMod v8.0
-          extended: true             # Use the extended version
+          hugo-version: '0.123.4'
+          extended: true
 
       - name: Build Site
         run: hugo --minify
