--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,35 +1,29 @@
 name: Deploy Hugo Site to GitHub Pages
-
 on:
   push:
     branches:
       - main
-
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
-
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.123.4'
           extended: true
-
       - name: Build Site
         run: hugo --minify
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          # Use the PAT secret instead of the default GITHUB_TOKEN
-          github_token: ${{ secrets.DEPLOY_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
