--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,17 +1,21 @@
 name: Deploy Hugo Site to GitHub Pages
+
 on:
   push:
     branches:
       - main
+
 permissions:
   contents: write
   pages: write
   id-token: write
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -22,8 +26,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.123.4'
-          extended: true
+          hugo-version: '0.125.7'  # Updated Hugo version to meet PaperMod's minimum requirement
+          extended: true           # Use the extended version
       
       - name: Build Site
         run: |
