--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,8 @@
 baseURL: https://example.com/
 languageCode: en-us
 title: Data Science Portfolio
-paginate: 5
+pagination:
+  pagerSize: 5
 theme: PaperMod
 
 params:
