--- a/themes/PaperMod/themes/PaperMod/config.yml
+++ b/themes/PaperMod/themes/PaperMod/config.yml
@@ -2,7 +2,8 @@ theme: "PaperMod"
 
 baseURL: "https://examplesite.com/"
 title: ExampleSite
-paginate: 5
+pagination:
+  pagerSize: 5
 theme: PaperMod
 
 enableRobotsTXT: true
