--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://example.com/
+baseURL: https://adarshkrishnan.com/
 languageCode: en-us
 title: Data Science Portfolio
 pagination:
