--- a/config.yml
+++ b/config.yml
@@ -1,59 +1,4 @@
 baseURL: https://adarshkrishnan.com/
 languageCode: en-us
 title: Adarsh Krishnan | Data Science
-theme: PaperMod
-paginate: 5 # Changed from a nested structure to the root, as per Hugo 0.110+ standards
-
-# Tell Hugo to bundle our custom CSS file
-assets:
-  css:
-    - assets/css/extended/custom.css
-
-params:
-  env: production
-  title: Adarsh Krishnan | Data Science Portfolio
-  description: "Data Scientist with a passion for turning data into actionable insights. Explore my projects and articles."
-  author: Adarsh Krishnan
-  
-  # Theme settings
-  defaultTheme: auto # Options: auto, light, dark
-  disableThemeToggle: false # Keep the sun/moon icon
-
-  # Post settings - These are the defaults for all posts
-  ShowReadingTime: true
-  ShowShareButtons: true
-  ShowPostNavLinks: true
-  ShowBreadCrumbs: true
-
-  # --- NEW: Polished Homepage ---
-  homeInfoParams:
-    Title: "Hi there! 👋 I'm Adarsh."
-    Content: "Welcome to my digital space. I'm a Data Scientist focused on machine learning, automation, and creating business impact with data. Feel free to explore my projects or get in touch!"
-
-  # --- NEW: Social Icons ---
-  socialIcons:
-    - name: linkedin
-      url: "https://www.linkedin.com/in/kriash/"
-    - name: github
-      url: "https://github.com/kriashks"
-    - name: email
-      url: "mailto:kriashks@gmail.com"
-
-menu:
-  main:
-    - identifier: blog
-      name: Blog
-      url: /blog/
-      weight: 1
-    - identifier: projects
-      name: Projects
-      url: /projects/
-      weight: 2
-    - identifier: experiences
-      name: Experiences
-      url: /experiences/
-      weight: 3
-    - identifier: about
-      name: About
-      url: /about/
-      weight: 4
+theme: hugo-blox-builder/modules/blox-bootstrap
